2004-02-11  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/main.c (set_comm_baud_rate): Get current rate with GETBAUD
	not SETBAUD!

2004-02-04  Gary Thomas  <gary@mlbassoc.com>

	* cdl/redboot.cdl: Do not build with "common" interrupt stack
	support.  This can cause problems when running programs (via
	the "go" command) as interrupts will corrupt RedBoot's stack.

2004-01-18  Gary Thomas  <gary@mlbassoc.com>

	* src/main.c: Fix build problem if GDB stubs are not included.
	Minor warning cleanup (cast on NO_MEMORY).

2003-12-21  Gary Thomas  <gary@mlbassoc.com>

	* src/net/tcp.c (tcp_send): Add [restore] delay into TCP write
	path.  Sadly, there seems to be some issue where some ACK packets
	get lost unless this is present (at least on some hardware).  
	n.b. a small delay here is definitely preferable to the horrendous
	delays imposed by TCP retries if this condition occurs.

	* src/fconfig.c: 
	* include/flash_config.h: New functions for get/set/enumerate
	config data which can be used via virtual vector interface.

2003-12-12  Jani Monoses <jani@iv.ro>

	* src/net/tcp.c: Cancel retransmission timer when SYN is acked
	otherwise an open active connection which doesn't send data
	eventually resends the SYN resulting in reset from the peer.

2003-12-08  Gary Thomas  <gary@mlbassoc.com>

	* cdl/redboot.cdl: Better handling of GDB stubs support.  This
	should be automatically included if the platform supports GDB.
	Disabling CYGDBG_HAL_DEBUG_GDB_INCLUDE_STUBS (in the common HAL)
	will fully disable GDB support.

2003-12-05  Gary Thomas  <gary@mlbassoc.com>

	* src/decompress.c (gzip_init): Memory pool initialization should
	only be done in _zlib_init().

2003-12-05  Ian Campbell  <icampbell@arcom.com>

	* src/decompress.c: Ensure that free'd blocks are returned to the
	free pool and that adjacent free blocks are merged. Initialise the
	pool in _zlib_init() so that things are initialised even when
	gzip_init hasn't been called.
